<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="Linie" Id="{8cb3be87-1920-4ad8-9827-896f28ae3174}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK Linie
VAR_INPUT
	bEnable:BOOL;
	bStart:BOOL;
	bSensor_Vorne :BOOL;
	bSensor_Mitte :BOOL;
	bSensor_Hinten :BOOL;
END_VAR
VAR_OUTPUT
	bRollenStopper_Vorne :BOOL;
	bRollenStopper_Mitte :BOOL;	
	estate : E_State_Linie;
	estate_A1 :E_STATE_AMPEL;
	estate_A2 :E_STATE_AMPEL;
END_VAR
VAR
	T_enable:BOOL;
    tTimer : TON; // Timer Variable
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
tTimer(IN:=T_enable, PT:=T#1S);

IF NOT bEnable THEN
    eState := E_State_Linie.IDLE;
END_IF

CASE eState OF
    E_State_Linie.IDLE:
	
        IF bEnable THEN
            eState := E_State_Linie.INIT;
        END_IF

    E_State_Linie.INIT:

		//Ampel 1 Umschalten
		IF NOT bSensor_Vorne THEN
			estate_A1 :=E_STATE_AMPEL.YELLOW;
		ELSE
			estate_A1 :=E_STATE_AMPEL.GREEN;
		END_IF
		//Ampel 2 Umschalten
		IF  bSensor_Hinten THEN
			estate_A2 :=E_STATE_AMPEL.YELLOW;
		ELSE
			estate_A2 :=E_STATE_AMPEL.GREEN;
		END_IF
		
		IF NOT bSensor_Mitte AND bSensor_Vorne THEN
			eState := E_State_Linie.OPEN_START;
		ELSIF NOT bSensor_Mitte AND NOT bSensor_Vorne THEN
		 	eState:=E_State_Linie.WAIT_START;
		END_IF
		
	    IF bStart THEN
			eState:=E_State_Linie.START;
		END_IF
		
	E_State_Linie.START:
		//Ampel 1 Umschalten
		IF NOT bSensor_Vorne THEN
			estate_A1 :=E_STATE_AMPEL.YELLOW;
		ELSE
			estate_A1 :=E_STATE_AMPEL.GREEN;
		END_IF
		//Ampel 2 Umschalten
		
		IF  bSensor_Hinten THEN
			estate_A2 :=E_STATE_AMPEL.YELLOW;
		ELSE
			estate_A2 :=E_STATE_AMPEL.GREEN;
		END_IF
	
		IF bSensor_Hinten AND bSensor_Mitte THEN
			eState := E_State_Linie.WAIT_MIDLE;		
		ELSIF NOT bSensor_Hinten AND bSensor_Mitte THEN
			eState := E_State_Linie.OPEN_MIDLE;
		END_IF
		
	E_State_Linie.WAIT_MIDLE:
	
		estate_A2 :=E_STATE_AMPEL.RED;
		IF NOT bSensor_Hinten THEN
			eState := E_State_Linie.OPEN_MIDLE;
		END_IF

    E_State_Linie.OPEN_MIDLE:
	
		bRollenStopper_Mitte:=TRUE;
		IF NOT bSensor_Mitte THEN
			T_enable:=TRUE;
		END_IF
        IF tTimer.Q THEN
            eState := E_State_Linie.CLOSE_MIDLE;
			T_enable:=FALSE;
        END_IF

    E_State_Linie.CLOSE_MIDLE:
	
		bRollenStopper_Mitte:=FALSE;
        IF NOT bSensor_Mitte AND bSensor_Vorne THEN
            eState := E_State_Linie.OPEN_START;
		ELSIF NOT bSensor_Mitte AND NOT bSensor_Vorne THEN
			eState := E_State_Linie.WAIT_START;
        END_IF
		
	E_State_Linie.WAIT_START:
	
		estate_A1 :=E_STATE_AMPEL.RED;
        IF bSensor_Vorne THEN
            eState := E_State_Linie.OPEN_START;
        END_IF
		
    E_State_Linie.OPEN_START:
		bRollenStopper_Vorne:=TRUE;
		IF NOT bSensor_Vorne THEN
			T_enable:=TRUE;
		END_IF
        IF tTimer.Q THEN
            eState := E_State_Linie.CLOSE_START;
			T_enable:=FALSE;
        END_IF
		
    E_State_Linie.CLOSE_START:
	
		bRollenStopper_Vorne:=FALSE;
		IF bSensor_Mitte THEN
        	eState := E_State_Linie.DONE;
		END_IF	

    E_State_Linie.DONE:
    eState := E_State_Linie.IDLE;
	
END_CASE




]]></ST>
    </Implementation>
    <LineIds Name="Linie">
      <LineId Id="214" Count="1" />
      <LineId Id="217" Count="0" />
      <LineId Id="73" Count="5" />
      <LineId Id="177" Count="0" />
      <LineId Id="79" Count="4" />
      <LineId Id="202" Count="0" />
      <LineId Id="147" Count="0" />
      <LineId Id="121" Count="0" />
      <LineId Id="140" Count="0" />
      <LineId Id="144" Count="1" />
      <LineId Id="141" Count="0" />
      <LineId Id="148" Count="4" />
      <LineId Id="146" Count="0" />
      <LineId Id="210" Count="0" />
      <LineId Id="266" Count="3" />
      <LineId Id="274" Count="1" />
      <LineId Id="270" Count="0" />
      <LineId Id="272" Count="0" />
      <LineId Id="239" Count="1" />
      <LineId Id="168" Count="0" />
      <LineId Id="283" Count="6" />
      <LineId Id="314" Count="0" />
      <LineId Id="290" Count="3" />
      <LineId Id="282" Count="0" />
      <LineId Id="281" Count="0" />
      <LineId Id="277" Count="3" />
      <LineId Id="276" Count="0" />
      <LineId Id="313" Count="0" />
      <LineId Id="163" Count="0" />
      <LineId Id="167" Count="0" />
      <LineId Id="164" Count="2" />
      <LineId Id="162" Count="0" />
      <LineId Id="91" Count="1" />
      <LineId Id="175" Count="0" />
      <LineId Id="125" Count="0" />
      <LineId Id="219" Count="0" />
      <LineId Id="218" Count="0" />
      <LineId Id="220" Count="0" />
      <LineId Id="93" Count="1" />
      <LineId Id="248" Count="0" />
      <LineId Id="95" Count="2" />
      <LineId Id="154" Count="0" />
      <LineId Id="126" Count="0" />
      <LineId Id="98" Count="1" />
      <LineId Id="127" Count="1" />
      <LineId Id="100" Count="0" />
      <LineId Id="173" Count="0" />
      <LineId Id="169" Count="0" />
      <LineId Id="174" Count="0" />
      <LineId Id="170" Count="2" />
      <LineId Id="161" Count="0" />
      <LineId Id="157" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="226" Count="0" />
      <LineId Id="229" Count="2" />
      <LineId Id="251" Count="2" />
      <LineId Id="101" Count="0" />
      <LineId Id="133" Count="0" />
      <LineId Id="112" Count="0" />
      <LineId Id="178" Count="0" />
      <LineId Id="136" Count="0" />
      <LineId Id="259" Count="0" />
      <LineId Id="113" Count="0" />
      <LineId Id="260" Count="0" />
      <LineId Id="114" Count="2" />
      <LineId Id="261" Count="0" />
      <LineId Id="117" Count="0" />
      <LineId Id="338" Count="0" />
      <LineId Id="340" Count="0" />
      <LineId Id="335" Count="0" />
      <LineId Id="334" Count="0" />
      <LineId Id="33" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>